Added Samples for Directivs

--- a/src/Directives/Samples/Variables/directives/partials/list-template.html
+++ b/src/Directives/Samples/Variables/directives/partials/list-template.html
@@ -1,7 +1,8 @@
 <div>
-    <ul>
-        <li><b>Message</b>: {{message}}</li>
-        <li><b>Literal</b>: {{literal}}</li>
-        <li><b>Alias</b>: {{alias}}</li>
+    Current Message: {{message}}<br />
+    <button type="button" name="addtime">Add time</button>
+    <button type="button" name="clearlog">Clear Log</button>
+    <h4>Change Log</h4>
+    <ul class="log">
     </ul>
 </div>
