--- a/src/Directives/Solutions/Variables/directives/partials/timer-template.html
+++ b/src/Directives/Solutions/Variables/directives/partials/timer-template.html
@@ -1,4 +1,3 @@
 <div>
-    <input type="text" value="{{expression}}" /><button type="button">Evalate</button>
-    <h4><code></code></h4>
+    <button type="button" name="start">Start</button><button type="button" name="reset" ng-show="counter > 0 && !started">Reset</button><span></span>
 </div>
