--- a/src/common/helpers/directives/partials/form-state.html
+++ b/src/common/helpers/directives/partials/form-state.html
@@ -2,7 +2,8 @@
     <div class="row">
         
         <div class="col-md-8 col-md-offset-2">
-            <h3>State Summary for form named: {{formName}} </h3>
+            <div class="bs-callout bs-callout-primary">
+            <h3>{{formName}} Validation Summary</h3>
             <h4 ng-click="toggleFieldSummary()">
                 Field Status 
                 <span class="glyphicon glyphicon-chevron-down pull-right" ng-show="showFieldSummary"></span>
@@ -46,6 +47,7 @@
                 </tbody>
             </table>
             
+        </div>
         </div>   
     </div>
 </div>
