--- a/src/Components/Samples/Basic/components/partials/teamComponent.html
+++ b/src/Components/Samples/Basic/components/partials/teamComponent.html
@@ -1,1 +1,10 @@
-<div>{{$ctrl.team.Name}}</div>
+<div>
+<ul>
+  <li>{{$ctrl.team.Name}}</li>
+  <li>{{$ctrl.team.Division}}</li>
+  <li>{{$ctrl.team.League}}</li>
+</ul>
+
+
+
+</div>
