--- a/src/Components/Solutions/ComponentCalculation/index.html
+++ b/src/Components/Solutions/ComponentCalculation/index.html
@@ -7,7 +7,7 @@
 <body ng-controller="HomeController as HomeCtrl">
 <h1>Components</h1>
 
-<team-component team="team" ng-repeat="team in HomeCtrl.teams"></team-component>
+<team-component team="one" ng-repeat="one in HomeCtrl.teams"></team-component>
 
 <script src="/common/js/jquery/jquery.js"></script>
 <script src="/common/js/angular/angular.js"></script>
