--- a/src/Directives/Samples/Variables/directives/partials/list-template.html
+++ b/src/Directives/Samples/Variables/directives/partials/list-template.html
@@ -1,5 +1,5 @@
 <div>
-    Current Message: {{message}}<br />
+    Current Message: {{HomeCtrl.message}}<br />
     <button type="button" name="addtime">Add time</button>
     <button type="button" name="clearlog">Clear Log</button>
     <h4>Change Log</h4>
